--- a/app/views/games/_games.html.erb
+++ b/app/views/games/_games.html.erb
@@ -1,8 +1,25 @@
-<% games.each do |game| %>
-  <div class="game-card">
-    <p><%= game.title %></p>
-    <p><%= game.console %></p>
-    <date><%= game.created_at.to_s(:short) %></date>
-  </div>
+<table>                         
+  <tr>
+    <th></th>                    
+    <th>Title</th>
+    <th>Console</th>
+    <th>Release Date <br/>(YYYY-MM-DD) </th>
+  </tr>
 
+<% games.each do |game| %>
+  <tr>
+  <td>
+      <img src="icon_12678.png" height="42" width="42">
+    </td>
+    <td>
+      <%= game.title%>
+    </td>  
+    <td>
+      <%= game.console%>
+    </td>  
+    <td>
+      <%= game.created_at.strftime("%F") %>
+    </td>
+</tr>
 <% end %>
+</table>
